[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_000_tutorial/scripts/level_000_tutorial.gd" type="Script" id=2]
[ext_resource path="res://assets/GFX/Tilesheet/tilesheet_complete.tres" type="TileSet" id=3]
[ext_resource path="res://assets/GFX/Tilesheet/non_navigatable_floors.tres" type="TileSet" id=4]
[ext_resource path="res://assets/GFX/Tilesheet/placeables.tres" type="TileSet" id=5]
[ext_resource path="res://entities/characters/npcs/security_camera/SecurityCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/characters/npcs/guard/Guard.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/door/Door.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/locked_door/LockedDoor.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/loot/Loot.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/objective_pointer/ObjectivePointer.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Lightmaps/torchmap.png" type="Texture" id=13]
[ext_resource path="res://entities/objective_area/ObjectiveArea.tscn" type="PackedScene" id=14]

[node name="Level" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Navigation2D" parent="." index="0"]
editor/display_folded = true

[node name="Map" parent="Navigation2D" index="0"]
tile_set = ExtResource( 3 )
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 1, 65536, 0, 65538, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 0, 65538, 65558, 0, 0, 65559, 0, 2, 65560, 0, 2, 65561, 0, 2, 65562, 0, 2, 65563, 0, 2, 65564, 0, 2, 65565, 0, 2, 65566, 0, 2, 65567, 0, 2, 65568, 0, 2, 65569, 0, 2, 65570, 0, 2, 65571, 0, 2, 65572, 0, 1, 131072, 0, 65538, 131073, 1, 0, 131074, 1, 2, 131075, 1, 0, 131076, 1, 0, 131077, 1, 2, 131078, 1, 4, 131079, 1, 4, 131080, 1, 0, 131081, 0, 65538, 131094, 0, 65538, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 0, 65538, 196608, 0, 65538, 196609, 1, 0, 196610, 1, 2, 196611, 1, 0, 196612, 1, 2, 196613, 1, 2, 196614, 1, 4, 196615, 1, 2, 196616, 1, 0, 196617, 0, 65539, 196618, 0, 2, 196619, 0, 2, 196620, 0, 2, 196621, 0, 2, 196622, 0, 2, 196623, 0, 1, 196630, 0, 65538, 196631, 1, 0, 196632, 1, 0, 196633, 0, 7, 196634, 0, 8, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 196640, 1, 4, 196641, 1, 4, 196642, 1, 0, 196643, 1, 0, 196644, 0, 65538, 262144, 0, 65538, 262145, 1, 0, 262146, 1, 2, 262147, 1, 2, 262148, 1, 4, 262149, 1, 0, 262150, 1, 4, 262151, 1, 0, 262152, 1, 0, 262153, 0, 6, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 65539, 262160, 0, 2, 262161, 0, 2, 262162, 0, 2, 262163, 0, 2, 262164, 0, 2, 262165, 0, 2, 262166, 0, 65537, 262167, 1, 0, 262168, 1, 0, 262169, 0, 65543, 262170, 0, 65544, 262171, 1, 0, 262172, 1, 0, 262173, 0, 65541, 262174, 1, 0, 262175, 1, 4, 262176, 1, 2, 262177, 1, 2, 262178, 1, 4, 262179, 1, 0, 262180, 0, 65538, 327680, 0, 65538, 327681, 1, 0, 327682, 1, 4, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 2, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 4, 327692, 1, 4, 327693, 1, 4, 327694, 1, 0, 327695, 0, 65538, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 0, 65538, 327710, 1, 0, 327711, 1, 4, 327712, 1, 4, 327713, 1, 0, 327714, 1, 4, 327715, 1, 0, 327716, 0, 65538, 393216, 0, 65538, 393217, 1, 0, 393218, 1, 4, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 2, 393223, 1, 2, 393224, 1, 0, 393225, 0, 65541, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 65538, 393232, 1, 0, 393233, 0, 65542, 393234, 0, 2, 393235, 0, 2, 393236, 0, 3, 393237, 0, 2, 393238, 0, 1, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 4, 393243, 1, 0, 393244, 1, 0, 393245, 0, 65538, 393246, 1, 0, 393247, 1, 2, 393248, 1, 4, 393249, 1, 4, 393250, 1, 4, 393251, 1, 0, 393252, 0, 65538, 458752, 0, 65538, 458753, 1, 0, 458754, 1, 4, 458755, 1, 0, 458756, 1, 4, 458757, 1, 4, 458758, 1, 2, 458759, 1, 0, 458760, 1, 0, 458761, 0, 65539, 458762, 0, 2, 458763, 0, 2, 458764, 0, 262148, 458765, 0, 8, 458766, 1, 0, 458767, 0, 65538, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 0, 65538, 458774, 0, 65538, 458775, 1, 0, 458776, 1, 2, 458777, 1, 4, 458778, 1, 2, 458779, 1, 0, 458780, 1, 0, 458781, 0, 6, 458782, 1, 0, 458783, 1, 2, 458784, 1, 4, 458785, 1, 4, 458786, 1, 0, 458787, 1, 0, 458788, 0, 65538, 524288, 0, 65538, 524289, 1, 0, 524290, 1, 4, 524291, 1, 2, 524292, 1, 2, 524293, 1, 2, 524294, 1, 4, 524295, 1, 2, 524296, 1, 0, 524297, 0, 65538, 524300, 0, 327682, 524301, 0, 65544, 524302, 1, 0, 524303, 0, 65539, 524304, 0, 2, 524305, 0, 2, 524306, 0, 5, 524307, 1, 0, 524308, 0, 65538, 524310, 0, 65538, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 0, 65538, 589824, 0, 65538, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 0, 65538, 589836, 0, 65538, 589837, 1, 0, 589838, 1, 0, 589839, 0, 65538, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 0, 65538, 589846, 0, 65536, 589847, 0, 2, 589848, 0, 2, 589849, 0, 2, 589850, 0, 2, 589851, 0, 2, 589852, 0, 2, 589853, 0, 2, 589854, 0, 2, 589855, 0, 2, 589856, 0, 2, 589857, 0, 2, 589858, 0, 1, 589859, 1, 0, 589860, 0, 65538, 655360, 0, 131076, 655361, 0, 8, 655362, 1, 0, 655363, 0, 7, 655364, 0, 196612, 655365, 0, 196612, 655366, 0, 196612, 655367, 0, 262149, 655368, 0, 2, 655369, 0, 65537, 655372, 0, 65538, 655373, 1, 0, 655374, 0, 65542, 655375, 0, 131079, 655376, 0, 5, 655377, 1, 0, 655378, 0, 65542, 655379, 0, 2, 655380, 0, 65540, 655394, 0, 65538, 655395, 1, 0, 655396, 0, 65538, 720896, 0, 327682, 720897, 0, 65544, 720898, 1, 0, 720899, 0, 65543, 720900, 0, 196613, 720901, 0, 196613, 720902, 0, 196613, 720903, 0, 327683, 720908, 0, 65538, 720909, 1, 0, 720910, 1, 0, 720911, 0, 65538, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 0, 65538, 720919, 0, 0, 720920, 0, 2, 720921, 0, 2, 720922, 0, 2, 720923, 0, 2, 720924, 0, 2, 720925, 0, 2, 720926, 0, 2, 720927, 0, 2, 720928, 0, 2, 720929, 0, 2, 720930, 0, 65537, 720931, 1, 0, 720932, 0, 65536, 720933, 0, 2, 720934, 0, 2, 720935, 0, 2, 720936, 0, 2, 720937, 0, 2, 720938, 0, 1, 786432, 0, 65538, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 0, 65538, 786444, 0, 65539, 786445, 0, 5, 786446, 1, 0, 786447, 0, 65536, 786448, 0, 3, 786449, 0, 2, 786450, 0, 5, 786451, 1, 0, 786452, 0, 65538, 786455, 0, 65538, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 786468, 1, 0, 786469, 1, 0, 786470, 1, 0, 786471, 1, 0, 786472, 1, 0, 786473, 1, 0, 786474, 0, 65538, 851968, 0, 65538, 851969, 1, 0, 851970, 1, 2, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 0, 65538, 851980, 0, 65538, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 0, 65538, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 0, 65538, 851991, 0, 65538, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 2, 851998, 1, 2, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 2, 852004, 1, 2, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852008, 1, 0, 852009, 1, 0, 852010, 0, 65538, 917504, 0, 65538, 917505, 1, 0, 917506, 1, 0, 917507, 1, 2, 917508, 1, 2, 917509, 1, 4, 917510, 1, 0, 917511, 0, 65538, 917516, 0, 65538, 917517, 1, 0, 917518, 0, 65542, 917519, 0, 2, 917520, 0, 65537, 917521, 1, 0, 917522, 0, 0, 917523, 0, 2, 917524, 0, 65537, 917527, 0, 65538, 917528, 1, 0, 917529, 1, 0, 917530, 0, 7, 917531, 0, 8, 917532, 1, 0, 917533, 1, 4, 917534, 1, 0, 917535, 1, 0, 917536, 0, 7, 917537, 0, 8, 917538, 1, 0, 917539, 1, 4, 917540, 1, 2, 917541, 1, 0, 917542, 0, 7, 917543, 0, 8, 917544, 1, 0, 917545, 1, 0, 917546, 0, 65538, 983040, 0, 65538, 983041, 1, 0, 983042, 1, 4, 983043, 1, 0, 983044, 1, 4, 983045, 1, 2, 983046, 1, 0, 983047, 0, 65538, 983052, 0, 65538, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 0, 65538, 983063, 0, 65538, 983064, 1, 0, 983065, 1, 0, 983066, 0, 65543, 983067, 0, 65544, 983068, 1, 0, 983069, 1, 0, 983070, 1, 2, 983071, 1, 0, 983072, 0, 65543, 983073, 0, 65544, 983074, 1, 0, 983075, 1, 4, 983076, 1, 0, 983077, 1, 0, 983078, 0, 65543, 983079, 0, 65544, 983080, 1, 0, 983081, 1, 0, 983082, 0, 65538, 1048576, 0, 65538, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 0, 65538, 1048588, 0, 65536, 1048589, 0, 2, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 2, 1048593, 0, 2, 1048594, 0, 65537, 1048599, 0, 65538, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 2, 1048606, 1, 4, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 4, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 1048618, 0, 65538, 1114112, 0, 65536, 1114113, 0, 2, 1114114, 0, 2, 1114115, 0, 2, 1114116, 0, 2, 1114117, 0, 2, 1114118, 0, 2, 1114119, 0, 65537, 1114135, 0, 65538, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 2, 1114142, 1, 0, 1114143, 1, 0, 1114144, 1, 0, 1114145, 1, 0, 1114146, 1, 0, 1114147, 1, 4, 1114148, 1, 0, 1114149, 1, 0, 1114150, 1, 0, 1114151, 1, 0, 1114152, 1, 0, 1114153, 1, 0, 1114154, 0, 65538, 1179671, 0, 65538, 1179672, 1, 0, 1179673, 1, 0, 1179674, 0, 7, 1179675, 0, 8, 1179676, 1, 0, 1179677, 1, 4, 1179678, 1, 4, 1179679, 1, 0, 1179680, 0, 7, 1179681, 0, 8, 1179682, 1, 0, 1179683, 1, 4, 1179684, 1, 4, 1179685, 1, 0, 1179686, 0, 7, 1179687, 0, 8, 1179688, 1, 0, 1179689, 1, 0, 1179690, 0, 65538, 1245207, 0, 65538, 1245208, 1, 0, 1245209, 1, 0, 1245210, 0, 65543, 1245211, 0, 65544, 1245212, 1, 0, 1245213, 1, 2, 1245214, 1, 0, 1245215, 1, 0, 1245216, 0, 65543, 1245217, 0, 65544, 1245218, 1, 0, 1245219, 1, 0, 1245220, 1, 4, 1245221, 1, 0, 1245222, 0, 65543, 1245223, 0, 65544, 1245224, 1, 0, 1245225, 1, 0, 1245226, 0, 65538, 1310743, 0, 65538, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 2, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 4, 1310756, 1, 2, 1310757, 1, 0, 1310758, 1, 0, 1310759, 1, 0, 1310760, 1, 0, 1310761, 1, 0, 1310762, 0, 65538, 1376279, 0, 65538, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376292, 1, 4, 1376293, 1, 0, 1376294, 1, 0, 1376295, 1, 0, 1376296, 1, 0, 1376297, 1, 0, 1376298, 0, 65538, 1441815, 0, 65538, 1441816, 1, 0, 1441817, 1, 0, 1441818, 0, 7, 1441819, 0, 8, 1441820, 1, 0, 1441821, 1, 4, 1441822, 1, 2, 1441823, 1, 0, 1441824, 0, 7, 1441825, 0, 8, 1441826, 1, 0, 1441827, 1, 2, 1441828, 1, 4, 1441829, 1, 0, 1441830, 0, 7, 1441831, 0, 8, 1441832, 1, 0, 1441833, 1, 0, 1441834, 0, 65538, 1507351, 0, 65538, 1507352, 1, 0, 1507353, 1, 0, 1507354, 0, 65543, 1507355, 0, 65544, 1507356, 1, 0, 1507357, 1, 2, 1507358, 1, 4, 1507359, 1, 0, 1507360, 0, 65543, 1507361, 0, 65544, 1507362, 1, 0, 1507363, 1, 0, 1507364, 1, 0, 1507365, 1, 0, 1507366, 0, 65543, 1507367, 0, 65544, 1507368, 1, 0, 1507369, 1, 0, 1507370, 0, 65538, 1572887, 0, 65538, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 4, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0, 1572902, 1, 0, 1572903, 1, 0, 1572904, 1, 0, 1572905, 1, 0, 1572906, 0, 65538, 1638423, 0, 65538, 1638424, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638427, 1, 0, 1638428, 1, 0, 1638429, 1, 0, 1638430, 1, 0, 1638431, 1, 0, 1638432, 1, 0, 1638433, 1, 0, 1638434, 1, 0, 1638435, 1, 0, 1638436, 1, 0, 1638437, 1, 0, 1638438, 1, 0, 1638439, 1, 0, 1638440, 1, 0, 1638441, 1, 0, 1638442, 0, 65538, 1703959, 0, 65536, 1703960, 0, 2, 1703961, 0, 2, 1703962, 0, 2, 1703963, 0, 2, 1703964, 0, 1, 1703965, 1, 0, 1703966, 0, 0, 1703967, 0, 2, 1703968, 0, 2, 1703969, 0, 2, 1703970, 0, 2, 1703971, 0, 2, 1703972, 0, 2, 1703973, 0, 2, 1703974, 0, 2, 1703975, 0, 2, 1703976, 0, 2, 1703977, 0, 2, 1703978, 0, 65537, 1769500, 0, 65538, 1769501, 1, 0, 1769502, 0, 65538, 1835036, 0, 65538, 1835037, 1, 0, 1835038, 0, 65538, 1900558, 0, 0, 1900559, 0, 2, 1900560, 0, 2, 1900561, 0, 2, 1900562, 0, 2, 1900563, 0, 2, 1900564, 0, 2, 1900565, 0, 1, 1900567, 0, 0, 1900568, 0, 2, 1900569, 0, 2, 1900570, 0, 2, 1900571, 0, 2, 1900572, 0, 65537, 1900573, 1, 0, 1900574, 0, 65536, 1900575, 0, 2, 1900576, 0, 2, 1900577, 0, 2, 1900578, 0, 2, 1900579, 0, 2, 1900580, 0, 2, 1900581, 0, 2, 1900582, 0, 2, 1900583, 0, 2, 1900584, 0, 2, 1900585, 0, 2, 1900586, 0, 1, 1966094, 0, 65538, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 0, 65536, 1966102, 0, 2, 1966103, 0, 65537, 1966104, 1, 0, 1966105, 1, 0, 1966106, 1, 0, 1966107, 1, 0, 1966108, 1, 0, 1966109, 1, 0, 1966110, 1, 0, 1966111, 1, 0, 1966112, 1, 0, 1966113, 1, 0, 1966114, 1, 0, 1966115, 1, 0, 1966116, 1, 0, 1966117, 1, 0, 1966118, 1, 0, 1966119, 1, 0, 1966120, 1, 0, 1966121, 1, 0, 1966122, 0, 65538, 2031630, 0, 65538, 2031631, 1, 0, 2031632, 1, 2, 2031633, 1, 0, 2031634, 1, 4, 2031635, 1, 2, 2031636, 1, 0, 2031637, 1, 0, 2031638, 1, 0, 2031639, 1, 0, 2031640, 1, 0, 2031641, 1, 2, 2031642, 1, 4, 2031643, 1, 2, 2031644, 1, 2, 2031645, 1, 2, 2031646, 1, 0, 2031647, 1, 2, 2031648, 1, 0, 2031649, 1, 4, 2031650, 1, 0, 2031651, 1, 2, 2031652, 1, 2, 2031653, 1, 0, 2031654, 1, 0, 2031655, 1, 0, 2031656, 1, 0, 2031657, 1, 0, 2031658, 0, 65538, 2097166, 0, 65538, 2097167, 1, 0, 2097168, 1, 2, 2097169, 1, 2, 2097170, 1, 2, 2097171, 1, 4, 2097172, 1, 0, 2097173, 0, 0, 2097174, 0, 2, 2097175, 0, 1, 2097176, 1, 0, 2097177, 1, 0, 2097178, 1, 2, 2097179, 1, 4, 2097180, 1, 0, 2097181, 1, 2, 2097182, 1, 2, 2097183, 1, 0, 2097184, 1, 0, 2097185, 1, 4, 2097186, 1, 2, 2097187, 1, 2, 2097188, 1, 4, 2097189, 1, 0, 2097190, 1, 0, 2097191, 0, 65541, 2097192, 1, 0, 2097193, 0, 65542, 2097194, 0, 65540, 2162702, 0, 65538, 2162703, 1, 0, 2162704, 1, 0, 2162705, 1, 0, 2162706, 1, 0, 2162707, 1, 0, 2162708, 1, 0, 2162709, 0, 65538, 2162711, 0, 65538, 2162712, 1, 0, 2162713, 1, 4, 2162714, 1, 0, 2162715, 1, 4, 2162716, 1, 2, 2162717, 1, 0, 2162718, 1, 0, 2162719, 1, 2, 2162720, 1, 4, 2162721, 1, 0, 2162722, 1, 0, 2162723, 1, 2, 2162724, 1, 4, 2162725, 1, 4, 2162726, 1, 0, 2162727, 0, 6, 2162728, 1, 0, 2162729, 1, 0, 2162730, 0, 65538, 2228238, 0, 65538, 2228239, 1, 0, 2228244, 1, 0, 2228245, 0, 65538, 2228247, 0, 65538, 2228248, 1, 0, 2228249, 1, 4, 2228250, 1, 0, 2228251, 1, 0, 2228252, 1, 0, 2228253, 1, 0, 2228254, 1, 0, 2228255, 1, 0, 2228256, 1, 0, 2228257, 1, 0, 2228258, 1, 0, 2228259, 1, 0, 2228260, 1, 2, 2228261, 1, 0, 2228262, 1, 0, 2228264, 1, 0, 2228265, 1, 0, 2228266, 0, 65538, 2293774, 0, 65538, 2293775, 1, 0, 2293776, 1, 0, 2293777, 1, 0, 2293778, 1, 0, 2293779, 1, 0, 2293780, 1, 0, 2293781, 0, 65538, 2293783, 0, 65538, 2293784, 1, 0, 2293785, 1, 2, 2293786, 1, 0, 2293787, 0, 7, 2293788, 0, 8, 2293789, 1, 0, 2293790, 1, 4, 2293791, 1, 0, 2293792, 1, 0, 2293793, 0, 7, 2293794, 0, 8, 2293795, 1, 0, 2293796, 1, 4, 2293797, 1, 4, 2293798, 1, 0, 2293800, 1, 0, 2293801, 1, 0, 2293802, 0, 65538, 2359310, 0, 65538, 2359311, 1, 0, 2359312, 1, 0, 2359313, 1, 0, 2359314, 1, 0, 2359315, 1, 0, 2359316, 1, 0, 2359317, 0, 65538, 2359319, 0, 65538, 2359320, 1, 0, 2359321, 1, 4, 2359322, 1, 0, 2359323, 0, 65543, 2359324, 0, 65544, 2359325, 1, 0, 2359326, 1, 0, 2359327, 1, 2, 2359328, 1, 0, 2359329, 0, 65543, 2359330, 0, 65544, 2359331, 1, 0, 2359332, 1, 2, 2359333, 1, 4, 2359334, 1, 0, 2359336, 1, 0, 2359337, 1, 0, 2359338, 0, 65538, 2424846, 0, 65536, 2424847, 0, 2, 2424848, 0, 2, 2424849, 0, 2, 2424850, 0, 2, 2424851, 0, 2, 2424852, 0, 2, 2424853, 0, 65537, 2424855, 0, 65538, 2424856, 1, 0, 2424857, 1, 0, 2424858, 1, 0, 2424859, 1, 0, 2424860, 1, 0, 2424861, 1, 0, 2424862, 1, 2, 2424863, 1, 2, 2424864, 1, 0, 2424865, 1, 0, 2424866, 1, 0, 2424867, 1, 0, 2424868, 1, 0, 2424869, 1, 2, 2424870, 1, 0, 2424872, 1, 0, 2424873, 1, 0, 2424874, 0, 65538, 2490391, 0, 65538, 2490392, 1, 0, 2490393, 1, 0, 2490394, 1, 0, 2490395, 1, 0, 2490396, 1, 0, 2490397, 1, 0, 2490398, 1, 0, 2490399, 1, 0, 2490400, 1, 0, 2490401, 1, 0, 2490402, 1, 0, 2490403, 1, 0, 2490404, 1, 0, 2490405, 1, 0, 2490406, 1, 0, 2490407, 0, 65541, 2490408, 1, 0, 2490409, 1, 0, 2490410, 0, 65538, 2555927, 0, 65538, 2555928, 1, 0, 2555929, 0, 0, 2555930, 0, 2, 2555931, 0, 2, 2555932, 0, 2, 2555933, 0, 2, 2555934, 0, 2, 2555935, 0, 2, 2555936, 0, 2, 2555937, 0, 2, 2555938, 0, 2, 2555939, 0, 2, 2555940, 0, 2, 2555941, 0, 3, 2555942, 0, 2, 2555943, 0, 4, 2555944, 0, 2, 2555945, 0, 2, 2555946, 0, 65537, 2621463, 0, 65538, 2621464, 1, 0, 2621465, 0, 65538, 2621466, 1, 0, 2621467, 1, 0, 2621468, 1, 0, 2621469, 1, 0, 2621470, 1, 0, 2621471, 1, 0, 2621472, 1, 0, 2621473, 1, 0, 2621474, 1, 0, 2621475, 1, 0, 2621476, 1, 0, 2621477, 0, 65538, 2686999, 0, 65538, 2687000, 1, 0, 2687001, 0, 65538, 2687002, 1, 0, 2687003, 1, 0, 2687004, 1, 4, 2687005, 1, 0, 2687006, 1, 2, 2687007, 1, 0, 2687008, 1, 2, 2687009, 1, 0, 2687010, 1, 2, 2687011, 1, 4, 2687012, 1, 0, 2687013, 0, 65538, 2752535, 0, 65538, 2752536, 1, 0, 2752537, 0, 6, 2752538, 1, 0, 2752539, 1, 0, 2752540, 1, 2, 2752541, 1, 4, 2752542, 1, 0, 2752543, 1, 4, 2752544, 1, 4, 2752545, 1, 2, 2752546, 1, 0, 2752547, 1, 0, 2752548, 1, 0, 2752549, 0, 65538, 2818071, 0, 65538, 2818072, 1, 0, 2818073, 1, 0, 2818074, 1, 0, 2818075, 1, 0, 2818076, 1, 0, 2818077, 1, 0, 2818078, 1, 0, 2818079, 1, 0, 2818080, 1, 0, 2818081, 1, 0, 2818082, 1, 0, 2818083, 1, 0, 2818084, 1, 0, 2818085, 0, 65538, 2883607, 0, 65536, 2883608, 0, 2, 2883609, 0, 2, 2883610, 0, 2, 2883611, 0, 2, 2883612, 0, 2, 2883613, 0, 2, 2883614, 0, 2, 2883615, 0, 2, 2883616, 0, 2, 2883617, 0, 2, 2883618, 0, 2, 2883619, 0, 2, 2883620, 0, 2, 2883621, 0, 65537 )

[node name="NonNavigatableFlooring" parent="Navigation2D" index="1"]
tile_set = ExtResource( 4 )
tile_data = PoolIntArray( 2228240, 0, 0, 2228241, 0, 0, 2228242, 0, 0, 2228243, 0, 0, 2228263, 0, 0, 2293799, 0, 0, 2359335, 0, 0, 2424871, 0, 0 )

[node name="Furniture" parent="Navigation2D" index="2"]
tile_set = ExtResource( 5 )
tile_data = PoolIntArray( 2228240, 0, 65542, 2228241, 1610612736, 65543, 2228242, 1610612736, 65543, 2228243, 1610612736, 65542, 2228263, -1073741824, 65544, 2293778, 0, 131076, 2293799, -1073741824, 65543, 2293801, -1073741824, 131076, 2359335, -1073741824, 65543, 2424871, -1073741824, 65542, 2424873, -1073741824, 131076 )

[node name="Destinations" parent="Navigation2D" index="3"]
editor/display_folded = true

[node name="Position2D2" type="Position2D" parent="Navigation2D/Destinations" index="0"]
position = Vector2( 1720.69, 1603.23 )

[node name="Position2D3" type="Position2D" parent="Navigation2D/Destinations" index="1"]
position = Vector2( 2495.88, 1606.17 )

[node name="Position2D5" type="Position2D" parent="Navigation2D/Destinations" index="2"]
position = Vector2( 2625.08, 1215.64 )

[node name="Position2D6" type="Position2D" parent="Navigation2D/Destinations" index="3"]
position = Vector2( 1597.36, 1215.64 )

[node name="Position2D7" type="Position2D" parent="Navigation2D/Destinations" index="4"]
position = Vector2( 1923.29, 1218.58 )

[node name="Position2D14" type="Position2D" parent="Navigation2D/Destinations" index="5"]
position = Vector2( 2313.83, 1479.91 )

[node name="Position2D17" type="Position2D" parent="Navigation2D/Destinations" index="6"]
position = Vector2( 2616, 2176 )

[node name="ExtractionPoint" parent="." index="1"]
margin_left = 1944.0
margin_top = 2608.0
margin_right = 2264.0
margin_bottom = 2768.0

[node name="Player" parent="." index="2"]
position = Vector2( 264, 973 )

[node name="SecurityCameras" parent="." index="3"]
editor/display_folded = true

[node name="SecurityCamera" parent="SecurityCameras" index="0" instance=ExtResource( 6 )]
position = Vector2( 1664, 334.539 )
rotation = 1.57079

[node name="SecurityCamera2" parent="SecurityCameras" index="1" instance=ExtResource( 6 )]
position = Vector2( 1888, 240.312 )
rotation = -1.57079

[node name="SecurityCamera3" parent="SecurityCameras" index="2" instance=ExtResource( 6 )]
position = Vector2( 2296, 360 )
rotation = -3.14159

[node name="SecurityCamera4" parent="SecurityCameras" index="3" instance=ExtResource( 6 )]
position = Vector2( 2176, 2224 )
rotation = -7.85397

[node name="SecurityCamera5" parent="SecurityCameras" index="4" instance=ExtResource( 6 )]
position = Vector2( 1712, 2304 )
rotation = -15.7079

[node name="Guards" parent="." index="4"]
editor/display_folded = true

[node name="Guard" parent="Guards" index="0" instance=ExtResource( 7 )]
position = Vector2( 1893.93, 1344.84 )

[node name="Guard2" parent="Guards" index="1" instance=ExtResource( 7 )]
position = Vector2( 2307.95, 1086.44 )

[node name="Guard3" parent="Guards" index="2" instance=ExtResource( 7 )]
position = Vector2( 2580.6, 1576.73 )

[node name="Doors" parent="." index="5"]
editor/display_folded = true

[node name="Door" parent="Doors" index="0" instance=ExtResource( 8 )]
position = Vector2( 608, 352 )
rotation = 1.57079

[node name="Door2" parent="Doors" index="1" instance=ExtResource( 8 )]
position = Vector2( 1632, 2784 )
rotation = 1.57079

[node name="Door3" parent="Doors" index="2" instance=ExtResource( 8 )]
position = Vector2( 2592, 2080 )
rotation = 3.14159

[node name="Door4" parent="Doors" index="3" instance=ExtResource( 8 )]
position = Vector2( 1888, 1792 )
rotation = 3.14159

[node name="Computers" parent="." index="6"]
editor/display_folded = true

[node name="Computer" parent="Computers" index="0" instance=ExtResource( 9 )]
position = Vector2( 2536, 2296 )
screen_text = "From: Marvin Hagley
To: Stephen Crocker

Hi Stephen,

Keep a close watch on Mr. Reed's office over there. Apparently there is a valuable briefcase behind his desk. 

Code is 6794 if you want to get in. just don't touch anything.

Regards,

Marv"
passcode = "6794"
locked_door_scene = NodePath("../../LockedDoors/LockedDoor")

[node name="LockedDoors" parent="." index="7"]
editor/display_folded = true

[node name="LockedDoor" parent="LockedDoors" index="0" instance=ExtResource( 10 )]
position = Vector2( 1440, 2016 )
rotation = -1.57079

[node name="Loot" parent="." index="8"]
editor/display_folded = true

[node name="Loot" parent="Loot" index="0" instance=ExtResource( 11 )]
position = Vector2( 1104, 2288 )

[node name="ObjectivePointer" parent="." index="9" instance=ExtResource( 12 )]
position = Vector2( 408, 1042 )

[node name="Lighting" type="Node2D" parent="." index="10"]
editor/display_folded = true

[node name="ConeLight" type="Light2D" parent="Lighting" index="0"]
position = Vector2( 72.0001, 72.0001 )
rotation = 0.523598
texture = ExtResource( 13 )
offset = Vector2( 640, 0 )
texture_scale = 2.0
energy = 0.75
shadow_enabled = true

[node name="ConeLight2" type="Light2D" parent="Lighting" index="1"]
position = Vector2( 440, 776 )
rotation = 2.35619
texture = ExtResource( 13 )
offset = Vector2( 640, 0 )
texture_scale = 2.0
energy = 0.75
shadow_enabled = true

[node name="ObjectiveMarkers" type="Node2D" parent="." index="11"]
editor/display_folded = true

[node name="Objective1" type="Position2D" parent="ObjectiveMarkers" index="0"]
position = Vector2( 152, 400 )

[node name="Objective2" type="Position2D" parent="ObjectiveMarkers" index="1"]
position = Vector2( 656, 353.404 )

[node name="Objective3" type="Position2D" parent="ObjectiveMarkers" index="2"]
position = Vector2( 1247.69, 352.3 )

[node name="Objective4" type="Position2D" parent="ObjectiveMarkers" index="3"]
position = Vector2( 2271.41, 547.894 )

[node name="Objective5" type="Position2D" parent="ObjectiveMarkers" index="4"]
position = Vector2( 1544, 2016 )

[node name="Objective6" type="Position2D" parent="ObjectiveMarkers" index="5"]
position = Vector2( 2600, 2248 )

[node name="Objective7" type="Position2D" parent="ObjectiveMarkers" index="6"]
position = Vector2( 1160, 2080 )

[node name="Objective8" type="Position2D" parent="ObjectiveMarkers" index="7"]
position = Vector2( 1907.26, 2688 )

[node name="ObjectiveAreas" type="Node2D" parent="." index="12"]
editor/display_folded = true

[node name="Objective1" parent="ObjectiveAreas" index="0" instance=ExtResource( 14 )]
position = Vector2( 152, 400 )

[node name="Objective2" parent="ObjectiveAreas" index="1" instance=ExtResource( 14 )]
position = Vector2( 672, 353.892 )

[node name="Objective3" parent="ObjectiveAreas" index="2" instance=ExtResource( 14 )]
position = Vector2( 1244.5, 353.404 )

[node name="Objective4" parent="ObjectiveAreas" index="3" instance=ExtResource( 14 )]
position = Vector2( 2270.53, 552.632 )

[node name="Objective5" parent="ObjectiveAreas" index="4" instance=ExtResource( 14 )]
position = Vector2( 1544, 2016.49 )

[node name="Objective6" parent="ObjectiveAreas" index="5" instance=ExtResource( 14 )]
position = Vector2( 2598.6, 2248 )

[node name="Objective7" parent="ObjectiveAreas" index="6" instance=ExtResource( 14 )]
position = Vector2( 1160, 2080 )

[node name="Objective8" parent="ObjectiveAreas" index="7" instance=ExtResource( 14 )]
position = Vector2( 1907.26, 2688 )

[node name="MapLabels" parent="." index="13"]
editor/display_folded = true

[node name="ReedsOffice" type="Label" parent="MapLabels" index="0"]
margin_left = 2384.0
margin_top = 2200.0
margin_right = 2684.0
margin_bottom = 2236.0
text = "Reed's Office"

[node name="ReedsOffice2" type="Label" parent="MapLabels" index="1"]
margin_left = 1016.0
margin_top = 2064.0
margin_right = 1316.0
margin_bottom = 2100.0
text = "Reed's Office"
[connection signal="move_completed" from="ObjectivePointer" to="." method="_on_ObjectivePointer_move_completed"]
[connection signal="body_entered" from="ObjectiveAreas/Objective1" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective2" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective3" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective4" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective5" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective6" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective7" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/Objective8" to="." method="_on_ObjectiveArea_body_entered"]

[editable path="GUI"]
